sort function created and linked to sort button, added more info to each tile

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <button id="repub">Show only Republicans</button>
             <button id="dem">Show only Democrats</button>
             <button id="indep">Show only Independents</button>
+            <button id="all">Show all</button>
         </div>
          <div id="tileContainer">
              <!--
